--- a/summer.html
+++ b/summer.html
@@ -81,28 +81,28 @@
                     I am extremely grateful for the opportunity to be a part of this INTERNSHIP PROGRAM AT 
                     " THE INDIAN VIDYARTHI " for web development. The knowledge and skills I have gained will undoubtedly benefit.</blockquote>
                 <div class="author">
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample1.jpg" alt="sq-sample1"/>
+                <img src="image/person.svg" alt="sq-sample1"/>
                 <h5>Rudra Prasad Mahapatra<span>Roland Institute of Technology Berhmpur</span></h5>
                 </div>
             </figure>
             <figure class="snip1192 hover">
                 <blockquote>It was great experience to me ,the mentors and the guides were very friendly, and too good in nature. I really feel fortunate to be the part of this organization.</blockquote>
                 <div class="author">
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample24.jpg" alt="sq-sample24"/>
+                <img src="image/person.svg" alt="sq-sample24"/>
                 <h5>Saurabh Kumar<span>Shaheed Bhagat Singh College<br>University of Delhi </span></h5>
                 </div>
             </figure>
             <figure class="snip1192">
                 <blockquote>The thing I found most surprising was that it was totally free! When I was browsing for things which I can do during my vacation, almost everything was paid- hence I thought to try this- but this thing was too good to be free !</blockquote>
                 <div class="author">
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample29.jpg" alt="sq-sample29"/>
+                <img src="image/person.svg" alt="sq-sample29"/>
                 <h5>Pranay Bedi Verma<span>DPS RK puram</span></h5>
                 </div>
             </figure>
             <figure class="snip1192">
                 <blockquote>The summer internship was an incredibly enriching experience. Throughout the program, I had the chance to work on diverse projects that expanded my skill set and knowledge. The collaborative environment fostered meaningful interactions with colleagues and mentors, allowing me to learn from their expertise. I appreciated the hands-on approach, as it helped me gain practical insights into real-world challenges. The company's commitment to professional development was evident through workshops and networking events that enhanced my understanding of the industry.This internship not only provided valuable exposure to the field but also improved my confidence in tackling complex tasks. Overall, I'm grateful for this opportunity, and I'm confident that the skills I've acquired will prove invaluable in my future endeavors.</blockquote>
                 <div class="author">
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample29.jpg" alt="sq-sample29"/>
+                <img src="image/person.svg" alt="sq-sample29"/>
                 <h5>Aman Deep Savaranya<span>The Air Force School</span></h5>
                 </div>
             </figure>
@@ -111,7 +111,7 @@
 
                     <br>Thank you team TIV </blockquote>
                 <div class="author">
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample29.jpg" alt="sq-sample29"/>
+                <img src="image/person.svg" alt="sq-sample29"/>
                 <h5>Hrishikesh Dheeraj<span>Delhi University</span></h5>
                 </div>
             </figure>
