--- a/blogs.html
+++ b/blogs.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/homeelements.css">
     <link rel="stylesheet" href="css/blog.css">
     <link rel="icon" type="image/png" href="image/tiv logo.png">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@40,700,0,0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap">
 </head>
 <body>
