--- a/blogs/blog3.html
+++ b/blogs/blog3.html
@@ -7,12 +7,18 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/homeelements.css">
     <link rel="stylesheet" href="../css/blog_page.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@40,700,0,0" />
     <link rel="icon" type="image/png" href="../image/tiv logo.png"><script src="js/index.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap">
 </head>
 <body>
     <div class = "nav">
-        <div class = "logo">
+      <a href="../blogs.html">
+        <span class="material-symbols-outlined" style="text-decoration:none; padding-top: 5px;">
+                arrow_back
+        </span>
+      </a>  
+      <div class = "logo">
             <a href = "../index.html"><img src="../image/hor logo.jpg"></a>
         </div>
         <div class = "menu">
