final link change

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <p>Coming Soon!</p>
                 </div>
             </a>
-            <a href = "newsletter.html">
+            <a href = "https://drive.google.com/file/d/1Gf4yApIHI7Yv4LqLFg0BYH9Co0u_x-B-/view">
                 <div id = "Work2" class="work-content">
                     <img src="image/Newsletter.jpg">
                     <h1>Newsletter</h1>
