--- a/blogs.html
+++ b/blogs.html
@@ -76,15 +76,37 @@
               <img src="image/blog/Blog3_Image1.png" alt="card__image" class="card__image" width="600" height="200">
             </div>
             <div class="card__body">
-              <span class="tag tag-brown">Awareness</span>
+              <span class="tag tag-blue">Awareness</span>
               <h4>Busting The Aryan Invasion Theory</h4>
               <p>We all have studied the Aryan invasion theory in our school N.C.E.R.T. textbooks ? What it mentioned is- the indigenous people of India, who lived in the north</p>
             </div>
             <div class="card__footer">
               <div class="user">
                 <div class="user__info">
-                  <h5>Vigaas Singh</h5>
+                  <h5>Meet Sijaria</h5>
                   <small>14/08/2023</small>
+                </div>
+              </div>
+            </div>
+          </div>
+        </a>
+
+        <!-- BLOG 4-->
+        <a href="blogs/blog4.html">
+          <div class="card">
+            <div class="card__header">
+              <img src="image/blog/Blog4_Image1.png" alt="card__image" class="card__image" width="600" height="200">
+            </div>
+            <div class="card__body">
+              <span class="tag tag-blue">Awareness</span>
+              <h4>Ableism</h4>
+              <p>Ableism in simple words can be defined as discrimination against a person with disabilities.</p>
+            </div>
+            <div class="card__footer">
+              <div class="user">
+                <div class="user__info">
+                  <h5>Vigaas Singh</h5>
+                  <small>16/08/2023</small>
                 </div>
               </div>
             </div>
