--- a/blogs/blog3.html
+++ b/blogs/blog3.html
@@ -60,7 +60,7 @@
           <div class="card">
             <h2>About Me</h2>
             <!-- <img src="../image/Tanav Bhatia.jpg" class="image"> -->
-            <p>This blog is written by Vigaas Singh</p>
+            <p>This blog is written by Meet Sijaria</p>
           </div>
         </div>
       </div>
