--- a/index.html
+++ b/index.html
@@ -124,92 +124,80 @@
             <h1 class="heading" style="color: white;"><center>Our Partners</center></h1>
         </div>
         <div class="partitions" id = "Partners">
-            <a href = "#">
+            <a href = "https://www.instagram.com/studomatrix/">
                 <div id = "Part1">
                     <img src="image/partners/partners1.jpg" alt="">
-                    <h1>Partner 1</h1>
-                    <p>boo</p>
+                    <h1>Studomatrix</h1>
                 </div>
             </a>
-            <a href = "#">
+            <a href = "https://www.instagram.com/projectnavrasa/">
                 <div id = "Part2" >
                     <img src="image/partners/partners2.jpg">
-                    <h1>Partner 2</h1>
-                    <p>boo</p>
+                    <h1>Project Navrasa</h1>
                 </div>
             </a>
-            <a href = "">
+            <a href = "https://www.instagram.com/thevoicesofworld/">
                 <div id = "Part3">
                     <img src="image/partners/partners3.jpg" alt="">
-                    <h1>Partner 3</h1>
-                    <p>boo</p>
+                    <h1>VOW</h1>
                 </div>
             </a>
-            <a href = "#">
+            <a href = "https://www.instagram.com/voiceyourvichaar/">
                 <div id = "Part4">
                     <img src="image/partners/partners4.jpg" alt="">
-                    <h1>Partner 4</h1>
-                    <p>boo</p>
+                    <h1>Voice Your Vishaar</h1>
                 </div>
             </a>
         </div>
         <div class="partitions" id = "Partners">
-            <a href = "">
+            <a href = "https://www.instagram.com/vorfreudeorganisation/">
                 <div id = "Part1">
                     <img src="image/partners/partners5.jpg" alt="">
-                    <h1>Partner 5</h1>
-                    <p>boo</p>
+                    <h1>Vorfruede</h1>
                 </div>
             </a>
-            <a href = "newsletter.html">
+            <a href = "https://www.instagram.com/supernova.teens/">
                 <div id = "Part2" >
                     <img src="image/partners/partners6.jpg">
-                    <h1>Partner 6</h1>
-                    <p>boo</p>
+                    <h1>Nova</h1>
                 </div>
             </a>
-            <a href = "">
+            <a href = "https://www.instagram.com/the.soft.move/">
                 <div id = "Part3">
                     <img src="image/partners/partners7.jpg" alt="">
-                    <h1>Partner 7</h1>
-                    <p>boo</p>
+                    <h1>Soft Movement</h1>
                 </div>
             </a>
             <a href = "">
                 <div id = "Part4">
                     <img src="image/partners/partners8.jpg" alt="">
-                    <h1>Partner 8</h1>
-                    <p>boo</p>
+                    <h1>Ayika</h1>
                 </div>
             </a>
         </div>
         <div class="partitions" id = "Partners">
-            <a href = "">
+            <a href = "https://instagram.com/theindianvidyarthi?igshid=MzRlODBiNWFlZA==">
                 <div id = "Part1">
                     <img src="image/partners/partners9.jpg" alt="">
-                    <h1>Partner 9</h1>
-                    <p>boo</p>
+                    <h1>Indigenous Neo</h1>
                 </div>
             </a>
-            <a href = "newsletter.html">
+            <a href = "https://www.instagram.com/paragon_mun/">
                 <div id = "Part2" >
                     <img src="image/partners/partners10.jpg">
-                    <h1>Partner 10</h1>
-                    <p>boo</p>
+                    <h1>Paragon MUN</h1>
                 </div>
             </a>
-            <a href = "">
+            <a href = "https://www.instagram.com/youthify.in/">
                 <div id = "Part3">
                     <img src="image/partners/partners11.jpg" alt="">
-                    <h1>Partner 11</h1>
-                    <p>bies</p>
+                    <h1>Youthify</h1>
                 </div>
             </a>
-            <a href = "">
+            <a href = "https://www.instagram.com/project.antigone/">
                 <div id = "Part4">
                     <img src="image/partners/partners12.jpg" alt="">
-                    <h1>Partner 12</h1>
-                    <p>I'm Batman!</p>
+                    <h1>Project Antigone</h1>
                 </div>
             </a>
         </div>
