--- a/team.html
+++ b/team.html
@@ -141,6 +141,30 @@
                     <p class="text">Team Member</p>
             </div></a>
         </div>
+
+        <h1 class="heading" style="color: white;"><center>Advisors</center></h1>
+        <div class="content">
+                <!-- card -->
+                
+                <a href="https://www.linkedin.com/in/vigaas-singh-8521321b3"  target="blank_" class="card">
+                <img src="image/Souhardya De.jpg" class="cardimg"/>
+                <div class="cardtext">
+                        <p class="title">Souhardya De</p> 
+                        <p class="text">Advisors</p>
+                </div></a>
+                <a href="https://www.linkedin.com/in/vardaan-gahlot-67447416b"  target="blank_" class="card">
+                <img src="image/Sumit Pandey.jpg" class="cardimg"/>
+                <div class="cardtext">
+                        <p class="title">Sumit Pandey</p> 
+                        <p class="text">Advisors</p>
+                </div></a>
+                <a href="https://www.linkedin.com/in/reet-singh/"  target="blank_" class="card">
+                <img src="image/Radhika Bhardwaj.jpg" class="cardimg"/>
+                <div class="cardtext">
+                        <p class="title">Radhika Bhardwaj</p> 
+                        <p class="text">Advisors</p>
+                </div></a>
+            </div>
         
         <section id="loading">
                 <div id="loader">
