--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@
         <div id = "About">
             <div id = "About-bg">
                 <div id = "About-bg-video">
-                    <video autoplay muted loop id="myVideo">
-                        <source src="video/bg_vid.mp4" type="video/mp4">
-                    </video>
+                    <img src="image/aboutBG.jpg" alt="" srcset="" style="width: 100vw;">
                 </div> 
                 <div id = "About-content">
                     <div id = "About-left">
