fix:Advisors tag add

--- a/team.html
+++ b/team.html
@@ -142,10 +142,10 @@
                     <p class="text">Developer & Designer</p>
             </div></a>
         </div>
-        <h1 class="heading" style="color: white;"><center>Other Team Members</center></h1>
 
         </div>
 
+        <h1 class="heading" style="color: white;"><center>Advisors</center></h1>
         <div class="content">
                 <!-- card -->
                 
