--- a/team.html
+++ b/team.html
@@ -85,7 +85,7 @@
                         <p class="text">Team Member</p>
                 </div></a>
                 <a href="https://www.linkedin.com/in/android-aggarwal"  target="blank_" class="card">
-                <img src="" class="cardimg"/>
+                <img src="image/Anirudh Aggarwal.jpg" class="cardimg"/>
                 <div class="cardtext">
                         <p class="title">Anirudh Aggarwal</p> 
                         <p class="text">Team Member</p>
@@ -148,7 +148,7 @@
                     <p class="text">Developer & Designer</p>
             </div></a>
         </div>
-        
+
 
         <h1 class="heading" style="color: white;"><center>Advisors</center></h1>
         <div class="content">
