feat:add new team memnber

--- a/team.html
+++ b/team.html
@@ -118,6 +118,12 @@
                         <p class="title">Reet Singh</p> 
                         <p class="text">Team Member</p>
                 </div></a>
+                <a href="https://www.linkedin.com/in/reet-singh/"  target="blank_" class="card">
+                <img src="" class="cardimg"/>
+                <div class="cardtext">
+                        <p class="title">Adamya Dhiman</p> 
+                        <p class="text">Team Member</p>
+                </div></a>
               </div>
         
         <h1 class="heading" style="color: white;"><center>Website Team</center></h1>
