--- a/blogs.html
+++ b/blogs.html
@@ -12,7 +12,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap">
 </head>
 <body>
-    <div class = "nav">
+  <img class="demo-bg" src="./image/aboutBG.jpg" alt="">
+  <div id = "contents">  
+  <div class = "nav">
         <div class = "logo">
             <a href = "index.html"><img src="image/hor logo.jpg"></a>
         </div>
@@ -114,7 +116,8 @@
         </a>
 
 
-      </div>
+    </div>
+  </div>
       <section id="loading">
         <div id="loader">
           <img src="image/loading.gif" alt="" id = "loader-gif">
