--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                   </div>
                 </li>
                 <li  class = "menu-item">
-                    <a href = "blogs.html" onclick="menuToggle()">Our Blog</a>
+                    <a href = "blogs.html" onclick="menuToggle()">Our Blogs</a>
                 </li>
                 <li class = "menu-item">
                     <a href = "team.html" onclick="menuToggle()">Our Team</a>
