--- a/team.html
+++ b/team.html
@@ -119,7 +119,7 @@
                         <p class="text">Team Member</p>
                 </div></a>
                 <a href="https://www.linkedin.com/in/reet-singh/"  target="blank_" class="card">
-                <img src="" class="cardimg"/>
+                <img src="image/Adamya.jpg" class="cardimg"/>
                 <div class="cardtext">
                         <p class="title">Adamya Dhiman</p> 
                         <p class="text">Team Member</p>
