--- a/summer.html
+++ b/summer.html
@@ -14,107 +14,111 @@
 
 </head>
 <body>
-    <div class = "nav">
-        <a href="index.html">
-            <span class="material-symbols-outlined" style="text-decoration:none; padding-top: 5px;">
-                    arrow_back
-            </span>
-        </a>
-        <div class = "logo">
-            <a href = "index.html"><img src="image/hor logo.jpg"></a>
-        </div>
-        <div class = "menu">
-            <ul class = "menu-items">
-                <li class = "menu-item">
-                    <a href = "index.html">Home Page</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <div id = "summer">
-        <div id = "summer-content">
-            <h2 id = "sub-heading">Join Us At The</h1>
-            <h1 id = "heading">Summer Programme</h1>
-            <div id = "content-stats">
-                <div class = "stat">
-                    <h1>14</h1>
-                    <h2>Days</h2>
-                </div>
-                <div class = "stat">
-                    <h1>6+6</h1>
-                    <h2>Mentors</h2>
-                </div>
-                <div class = "stat">
-                    <h1>8+</h1>
-                    <h2>Skills</h2>
-                </div>
-                <div class = "stat">
-                    <h1>3600+</h1>
-                    <h2>Mins</h2>
-                </div>
-                <div class = "stat">
-                    <h1>20+</h1>
-                    <h2>Sessions</h2>
-                </div>
-                <div class = "stat">
-                    <h1>100+</h1>
-                    <h2>Students</h2>
-                </div>
-                <div class = "stat">
-                    <h1>17</h1>
-                    <h2>States</h2>
-                </div>
+    <img class="demo-bg" src="./image/aboutBG.jpg" alt="">
+    <div id = "contents">
+        <div class = "nav">
+            <a href="index.html">
+                <span class="material-symbols-outlined" style="text-decoration:none; padding-top: 5px;">
+                        arrow_back
+                </span>
+            </a>
+            <div class = "logo">
+                <a href = "index.html"><img src="image/hor logo.jpg"></a>
             </div>
-            <div id = "summer-description">
-                <div >
-                    <img src="image/summer1.png" id = "content-img">
-                </div>
-                <div id = "content-description">
-                    <p>The Summer Programme was launched with the effort to make basic valuable skills available to the students and help them make the best use of their summertime! We believe in the power of mentorship and through rigorous online sessions in the span of two weeks we brought together experts from fields such as Content Writing, Outreach & Expansion, Website Development, Graphic Designing and Social Media Marketing to share their expertise and knowledge.</p>
-                </div>
-            </div> 
+            <div class = "menu">
+                <ul class = "menu-items">
+                    <li class = "menu-item">
+                        <a href = "index.html">Home Page</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <p id = "testimonials-heading">Testimonials</p>
-        <div id = "testimonials">
-            <figure class="snip1192">
-                <blockquote>As a participant, I found the program to be highly informative and valuable in enhancing my skills and knowledge in web development.
-                    I am extremely grateful for the opportunity to be a part of this INTERNSHIP PROGRAM AT 
-                    " THE INDIAN VIDYARTHI " for web development. The knowledge and skills I have gained will undoubtedly benefit.</blockquote>
-                <div class="author">
-                <img src="image/person.svg" alt="sq-sample1" style="background-color: white;"/>
-                <h5>Rudra Prasad Mahapatra<span>Roland Institute of Technology Berhmpur</span></h5>
+        <div id = "summer">
+            <div id = "summer-content">
+                <h2 id = "sub-heading">Join Us At The</h1>
+                <h1 id = "heading">Summer Programme</h1>
+                <div id = "content-stats">
+                    <div class = "stat">
+                        <h1>14</h1>
+                        <h2>Days</h2>
+                    </div>
+                    <div class = "stat">
+                        <h1>6+6</h1>
+                        <h2>Mentors</h2>
+                    </div>
+                    <div class = "stat">
+                        <h1>8+</h1>
+                        <h2>Skills</h2>
+                    </div>
+                    <div class = "stat">
+                        <h1>3600+</h1>
+                        <h2>Mins</h2>
+                    </div>
+                    <div class = "stat">
+                        <h1>20+</h1>
+                        <h2>Sessions</h2>
+                    </div>
+                    <div class = "stat">
+                        <h1>100+</h1>
+                        <h2>Students</h2>
+                    </div>
+                    <div class = "stat">
+                        <h1>17</h1>
+                        <h2>States</h2>
+                    </div>
                 </div>
-            </figure>
-            <figure class="snip1192 hover">
-                <blockquote>It was great experience to me ,the mentors and the guides were very friendly, and too good in nature. I really feel fortunate to be the part of this organization.</blockquote>
-                <div class="author">
-                <img src="image/person.svg" alt="sq-sample24" style="background-color: white;"/>
-                <h5>Saurabh Kumar<span>Shaheed Bhagat Singh College<br>University of Delhi </span></h5>
-                </div>
-            </figure>
-            <figure class="snip1192">
-                <blockquote>The thing I found most surprising was that it was totally free! When I was browsing for things which I can do during my vacation, almost everything was paid- hence I thought to try this- but this thing was too good to be free !</blockquote>
-                <div class="author">
-                <img src="image/person.svg" alt="sq-sample29" style="background-color: white;"/>
-                <h5>Pranay Bedi Verma<span>DPS RK puram</span></h5>
-                </div>
-            </figure>
-            <figure class="snip1192">
-                <blockquote>The summer internship was an incredibly enriching experience. Throughout the program, I had the chance to work on diverse projects that expanded my skill set and knowledge. The collaborative environment fostered meaningful interactions with colleagues and mentors, allowing me to learn from their expertise. I appreciated the hands-on approach, as it helped me gain practical insights into real-world challenges. The company's commitment to professional development was evident through workshops and networking events that enhanced my understanding of the industry.This internship not only provided valuable exposure to the field but also improved my confidence in tackling complex tasks. Overall, I'm grateful for this opportunity, and I'm confident that the skills I've acquired will prove invaluable in my future endeavors.</blockquote>
-                <div class="author">
-                <img src="image/person.svg" alt="sq-sample29" style="background-color: white;"/>
-                <h5>Aman Deep Savaranya<span>The Air Force School</span></h5>
-                </div>
-            </figure>
-            <figure class="snip1192">
-                <blockquote>The summer internship program was a great opportunity for mastering new skills with experienced mentors, even the the mentors were also as experienced as professional mentor.
+                <div id = "summer-description">
+                    <div >
+                        <img src="image/summer1.png" id = "content-img" style=" width : 37vw;  max-height: 37vw;">
+                    </div>
+                    <div id = "content-description">
+                        <p>The Summer Programme was launched with the effort to make basic valuable skills available to the students and help them make the best use of their summertime! We believe in the power of mentorship and through rigorous online sessions in the span of two weeks we brought together experts from fields such as Content Writing, Outreach & Expansion, Website Development, Graphic Designing and Social Media Marketing to share their expertise and knowledge.</p>
+                    </div>
+                </div> 
+            </div>
+            <p id = "testimonials-heading">Testimonials</p>
+            <div id = "testimonials">
+                <figure class="snip1192">
+                    <blockquote>As a participant, I found the program to be highly informative and valuable in enhancing my skills and knowledge in web development.
+                        I am extremely grateful for the opportunity to be a part of this INTERNSHIP PROGRAM AT 
+                        " THE INDIAN VIDYARTHI " for web development. The knowledge and skills I have gained will undoubtedly benefit.</blockquote>
+                    <div class="author">
+                    <img src="image/person.svg" alt="sq-sample1" style="background-color: white;"/>
+                    <h5>Rudra Prasad Mahapatra<span>Roland Institute of Technology Berhmpur</span></h5>
+                    </div>
+                </figure>
+                <figure class="snip1192 hover">
+                    <blockquote>It was great experience to me ,the mentors and the guides were very friendly, and too good in nature. I really feel fortunate to be the part of this organization.</blockquote>
+                    <div class="author">
+                    <img src="image/person.svg" alt="sq-sample24" style="background-color: white;"/>
+                    <h5>Saurabh Kumar<span>Shaheed Bhagat Singh College<br>University of Delhi </span></h5>
+                    </div>
+                </figure>
+                <figure class="snip1192">
+                    <blockquote>The thing I found most surprising was that it was totally free! When I was browsing for things which I can do during my vacation, almost everything was paid- hence I thought to try this- but this thing was too good to be free !</blockquote>
+                    <div class="author">
+                    <img src="image/person.svg" alt="sq-sample29" style="background-color: white;"/>
+                    <h5>Pranay Bedi Verma<span>DPS RK puram</span></h5>
+                    </div>
+                </figure>
+                <figure class="snip1192">
+                    <blockquote>
+                        The summer internship was a fantastic experience. I worked on diverse projects, learned from colleagues and mentors in a collaborative environment, and gained practical insights into real-world challenges. The company's commitment to professional development through workshops and networking events improved my industry understanding and boosted my confidence in handling complex tasks. I'm grateful for this opportunity, and the skills I've acquired will be invaluable in my future endeavors.</blockquote>
+                    <div class="author">
+                    <img src="image/person.svg" alt="sq-sample29" style="background-color: white;"/>
+                    <h5>Aman Deep Savaranya<span>The Air Force School</span></h5>
+                    </div>
+                </figure>
+                <figure class="snip1192">
+                    <blockquote>The summer internship program was a great opportunity for mastering new skills with experienced mentors, even the the mentors were also as experienced as professional mentor.
 
-                    <br>Thank you team TIV </blockquote>
-                <div class="author">
-                <img src="image/person.svg" alt="sq-sample29" style="background-color: white;"/>
-                <h5>Hrishikesh Dheeraj<span>Delhi University</span></h5>
-                </div>
-            </figure>
+                        <br>Thank you team TIV </blockquote>
+                    <div class="author">
+                    <img src="image/person.svg" alt="sq-sample29" style="background-color: white;"/>
+                    <h5>Hrishikesh Dheeraj<span>Delhi University</span></h5>
+                    </div>
+                </figure>
+            </div>
         </div>
     </div>
     <section id="loading">
@@ -164,6 +168,12 @@
       </script>
       <script src="js/index.js"></script>      
       <script src="js/summer.js"></script>      
-
+      <script>
+        window.addEventListener('load', function () {
+          var demoBg = document.querySelector('.demo-bg');
+          var contents = document.querySelector('#contents');
+          demoBg.style.maxHeight = contents.clientHeight + 'px';
+        });
+      </script>
 </body>
 </html>
