--- a/summer.html
+++ b/summer.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-    <img class="demo-bg" src="./image/aboutBG.jpg" alt="">
+    <!-- <img class="demo-bg" src="./image/aboutBG.jpg" alt=""> -->
     <div id = "contents">
         <div class = "nav">
             <a href="index.html">
