feat: send blog button

--- a/blogs.html
+++ b/blogs.html
@@ -27,8 +27,8 @@
         </div>
     </div>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <div class="container">
-
+    <div class="parent-container">
+      <div class="container">
         <!-- BLOG 1-->
         <a href="blogs/blog1.html"><div class="card">
           <div class="card__header">
@@ -114,10 +114,20 @@
             </div>
           </div>
         </a>
-
-
+    </div>
+    <div class="button">
+      <a href="https://forms.gle/6sdsfXnMq1jHLos9A
+      " class="button type--A">
+        <div class="button__line"></div>
+        <div class="button__line"></div>
+        <span class="button__text">Send Your Entries</span>
+        <div class="button__drow1"></div>
+        <div class="button__drow2"></div>
+      </a>
     </div>
   </div>
+  </div>
+    
       <section id="loading">
         <div id="loader">
           <img src="image/loading.gif" alt="" id = "loader-gif">
