--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                       <i class="fa fa-caret-down"></i>
                     </a>
                     <div class="dropdown-content">                        
-                        <a href = "https://drive.google.com/file/d/1Gf4yApIHI7Yv4LqLFg0BYH9Co0u_x-B-/view" onclick="menuToggle()" >Newsletter</a>
+                        <a href = "newsletter.html" onclick="menuToggle()" >Newsletter</a>
                         <a  href = "summer.html" onclick="menuToggle()">Summer Internship</a>
                         <a id="off">Aspirants Network</a>
                     </div>
@@ -103,7 +103,7 @@
                     <p>Coming Soon!</p>
                 </div>
             </a>
-            <a href = "https://drive.google.com/file/d/1Gf4yApIHI7Yv4LqLFg0BYH9Co0u_x-B-/view">
+            <a href = "newsletter.html">
                 <div id = "Work2" class="work-content">
                     <img src="image/Newsletter.jpg">
                     <h1>Newsletter</h1>
