--- a/newsletter.html
+++ b/newsletter.html
@@ -1,1 +1,60 @@
-<iframe src="https://drive.google.com/file/d/1Gf4yApIHI7Yv4LqLFg0BYH9Co0u_x-B-/preview" width="100%" height="100%" allow="autoplay"></iframe>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Indian Vidyarthi</title>
+        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="icon" type="image/png" href="image/tiv logo.png">
+        <script src="js/navbar.js" defer></script>
+        <script src="js/index.js" defer></script>
+    </head>
+<body>
+    <div class="nav" id="nav">
+        <div class="logo">
+            <img src="image/hor logo.jpg">
+        </div>
+        <div class="hamburger" id="hamburger">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+        </div>
+        <div class="menu" id="menu">
+            <ul class="menu-items">
+                <li class="menu-item">
+                    <a href="#About" onclick="menuToggle()">About Us</a>
+                </li>
+                <li class="menu-item">
+                    <div class="dropdown">
+                        <a class="dropbtn">Our Work
+                            <i class="fa fa-caret-down"></i>
+                        </a>
+                        <div class="dropdown-content">
+                            <a href="newsletter.html" onclick="menuToggle()">Newsletter</a>
+                            <a href="summer.html" onclick="menuToggle()">Summer School</a>
+                            <a id="off">Aspirants Network</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="menu-item">
+                    <a href="blogs.html" onclick="menuToggle()">Our Blogs</a>
+                </li>
+                <li class="menu-item">
+                    <a href="team.html" onclick="menuToggle()">Our Team</a>
+                <li class="menu-item">
+                    <a href="#PartnersH" onclick="menuToggle()">Our Partners</a>
+                </li>
+                <li class="menu-item">
+                    <a href="#contactH" onclick="menuToggle()">Contact Us</a>
+                </li>
+            </ul>
+
+        </div>
+
+    </div>    
+    <iframe src="https://drive.google.com/file/d/1Gf4yApIHI7Yv4LqLFg0BYH9Co0u_x-B-/preview" width="100%" height="100%" allow="autoplay"></iframe>
+</body>
+</html>
