--- a/team.html
+++ b/team.html
@@ -20,7 +20,7 @@
         <div class="demo-content">
                 <div class="nav" id="nav">
                         <div class="logo">
-                                <img src="image/hor logo.jpg">
+                                <a href="index.html"><img src="image/hor logo.jpg"></a>
                         </div>
                         <div class="hamburger" id="hamburger">
                                 <div class="bar1"></div>
@@ -30,7 +30,7 @@
                         <div class="menu" id="menu">
                                 <ul class="menu-items">
                                         <li class="menu-item">
-                                                <a href="#About" onclick="menuToggle()">About Us</a>
+                                                <a href="index.html" onclick="menuToggle()">About Us</a>
                                         </li>
                                         <li class="menu-item">
                                                 <div class="dropdown">
@@ -52,10 +52,10 @@
                                         <li class="menu-item">
                                                 <a href="team.html" onclick="menuToggle()">Our Team</a>
                                         <li class="menu-item">
-                                                <a href="#PartnersH" onclick="menuToggle()">Our Partners</a>
+                                                <a href="index.html" onclick="menuToggle()">Our Partners</a>
                                         </li>
                                         <li class="menu-item">
-                                                <a href="#contactH" onclick="menuToggle()">Contact Us</a>
+                                                <a href="index.html" onclick="menuToggle()">Contact Us</a>
                                         </li>
                                 </ul>
 
