--- a/newsletter.html
+++ b/newsletter.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Indian Vidyarthi</title>
-        <link rel="stylesheet" href="css/styles.css">
-        <link rel="stylesheet"
-            href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="icon" type="image/png" href="image/tiv logo.png">
-        <script src="js/navbar.js" defer></script>
-        <script src="js/index.js" defer></script>
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Indian Vidyarthi</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" type="image/png" href="image/tiv logo.png">
+    <script src="js/navbar.js" defer></script>
+    <script src="js/index.js" defer></script>
+</head>
+
 <body>
     <div class="nav" id="nav">
         <div class="logo">
-            <img src="image/hor logo.jpg">
+            <a href="index.html"><img src="image/hor logo.jpg"></a>
         </div>
         <div class="hamburger" id="hamburger">
             <div class="bar1"></div>
@@ -25,7 +27,7 @@
         <div class="menu" id="menu">
             <ul class="menu-items">
                 <li class="menu-item">
-                    <a href="#About" onclick="menuToggle()">About Us</a>
+                    <a href="index.html" onclick="menuToggle()">About Us</a>
                 </li>
                 <li class="menu-item">
                     <div class="dropdown">
@@ -45,16 +47,18 @@
                 <li class="menu-item">
                     <a href="team.html" onclick="menuToggle()">Our Team</a>
                 <li class="menu-item">
-                    <a href="#PartnersH" onclick="menuToggle()">Our Partners</a>
+                    <a href="index.html" onclick="menuToggle()">Our Partners</a>
                 </li>
                 <li class="menu-item">
-                    <a href="#contactH" onclick="menuToggle()">Contact Us</a>
+                    <a href="index.html" onclick="menuToggle()">Contact Us</a>
                 </li>
             </ul>
 
         </div>
 
-    </div>    
-    <iframe src="https://drive.google.com/file/d/1Gf4yApIHI7Yv4LqLFg0BYH9Co0u_x-B-/preview" width="100%" height="100%" allow="autoplay"></iframe>
+    </div>
+    <iframe src="https://drive.google.com/file/d/1Gf4yApIHI7Yv4LqLFg0BYH9Co0u_x-B-/preview" width="100%" height="100%"
+        allow="autoplay"></iframe>
 </body>
+
 </html>
