--- a/index.html
+++ b/index.html
@@ -63,9 +63,10 @@
     </div>
     <div class="partitions" id="Content">
         <div class="partitions" , id="Intro">
-            <video autoplay muted loop id="myVideo">
+            <!-- <video autoplay muted loop id="myVideo">
                 <source src="video/TIVHome.mp4" type="video/mp4">
-            </video>
+            </video> -->
+        <img src="image/heroImg.png" style="width: 100vw; object-fit: cover; height:90vh"/>
         </div>
         <div id="About">
             <div id="About-bg">
