--- a/newsletter.html
+++ b/newsletter.html
@@ -13,7 +13,7 @@
         <script src="js/index.js" defer></script>
     </head>
 <body>
-    <div class="nav" id="nav">
+    <div class="nav" id="nav" style="position: relative;">
         <div class="logo">
             <img src="image/hor logo.jpg">
         </div>
